--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
         .hero::before {
             content: "";
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url("background.png");
-
-            filter: blur(1px);
-            transform: scale(1.01);
+            inset: 0;
+            background-image: url("background.png");
+            background-size: cover;
+            background-position: center right;
+            background-repeat: no-repeat;
             z-index: -2;
         }
+
+
 
         .hero::after {
             content: "";
